--- a/porfolio.html
+++ b/porfolio.html
@@ -116,8 +116,6 @@
             </div>
             <div class="pg-btn">
                 <div class="pagination">
-                    <a href="index.html" class="nxt-btn">Home</a>
-                    <a href="portfolio.html" class="nxt-btn">More Drawings</a>
                     <a href="comics.html" class="nxt-btn">Comics</a>
                 </div>
             </div>
@@ -137,7 +135,7 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Social Tags</h4>
                         <a class="btn btn-outline-light btn-social mx-1" href="#"><i class="fab fa-fw fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#"><i class="fab fa-fw fa-instagram"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.instagram.com/tega__aa/"><i class="fab fa-fw fa-instagram" target="_blank"></i></a>
                     </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
